--- a/public/frontend/infixlmstheme/css/frontend_style.css
+++ b/public/frontend/infixlmstheme/css/frontend_style.css
@@ -2089,6 +2089,15 @@ label {
     overflow: auto;
     scrollbar-width: none;
 }
+.bread_crumbs{
+    background-color: transparent;
+    border: 2px solid white;
+    color: white;
+}
+.bread_crumbs:hover{
+    background-color: var(--system_primery_color);
+    border-color: var(--system_primery_color);
+}
 @media (max-width: 767.98px) {
     .header_area .contact_wrap {
         margin-left: 0;
