--- a/public/frontend/infixlmstheme/css/frontend_style.css
+++ b/public/frontend/infixlmstheme/css/frontend_style.css
@@ -2500,10 +2500,6 @@ input[type="number"] {
     font-weight: 700;
 }
 
-/* 
-.cta_area .section__title p {
-    margin-bottom: 1rem;
-} */
 
 .package_area {
     background-image: url(../img/banner/backage_bg.jpg);
@@ -9507,11 +9503,6 @@ input[type="number"] {
     .section__title p {
         font-size: 20px;
     }
-
-    /* .cta_area-row {
-        min-width: 82rem;
-        max-width: 82rem;
-    } */
 
 }
 
@@ -17190,6 +17181,10 @@ body {
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
+    .cta_area{
+        height: 400px !important;
+        padding: 20px 0px !important;
+    }
 
     .about_description {
         height: 700px;
